# bintropy

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
bintropy/: __info__.py  __init__.py  __main__.py
src/bintropy/: VERSION.txt  __init__.py  __main__.py
