[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "bintropy.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project]
name = "bintropy"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Analysis tool for estimating the likelihood that a binary contains compressed or encrypted bytes"
license = {file = "LICENSE"}
keywords = ["binary", "entropy", "bintropy", "packing", "packed-executable", "packing-detection", "elf", "pe"]
requires-python = ">=3.8,<4"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]
dependencies = [
  "lief>=0.13.0",
  "matplotlib",
  "numpy>=1.23.0",
  "pillow>=10.0.1",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/packing-box/bintropy"
issues = "https://github.com/packing-box/bintropy/issues"
repository = "https://github.com/packing-box/bintropy"

[project.scripts]
bintropy = "bintropy.__main__:main"
